cmake_minimum_required(VERSION 3.17)
project(MyLeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyLeetCode main.cpp LCPrimaryArray1.cpp LCPrimaryArray1.h LCPrimaryArray2.cpp LCPrimaryArray2.h LCPrimaryArray3.cpp LCPrimaryArray3.h LCPrimaryArray4.cpp LCPrimaryArray4.h LCPrimaryArray5.cpp LCPrimaryArray5.h)