cmake_minimum_required(VERSION 3.17)
project(MyLeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyLeetCode main.cpp LCPrimaryArray1.cpp LCPrimaryArray1.h LCPrimaryArray2.cpp LCPrimaryArray2.h LCPrimaryArray3.cpp LCPrimaryArray3.h LCPrimaryArray4.cpp LCPrimaryArray4.h LCPrimaryArray5.cpp LCPrimaryArray5.h LCPrimaryArray6.cpp LCPrimaryArray6.h LCPrimaryArray7.cpp LCPrimaryArray7.h LCPrimaryArray8.cpp LCPrimaryArray8.h LCPrimaryArray9.cpp LCPrimaryArray9.h LCPrimaryArray10.cpp LCPrimaryArray10.h)